Fixing bug on mobile version - badge size in about me section. Bigger font in menu on mobile version

--- a/less/styles.less
+++ b/less/styles.less
@@ -67,6 +67,7 @@ main {
     display: flex;
     justify-content: center;
 
+
     .navigation-container {
         flex: 0 1 1280px;
         display: flex;
@@ -195,6 +196,7 @@ main {
 
                         &:not(:last-child) {
                             order: 3;
+                            font-size: 2em;
                             color: red;
                             width: 100%;
                             display: block;
@@ -350,7 +352,7 @@ main {
                 img {
                     margin-top: 0.3em;
                     margin-bottom: 0.5em;
-                    width: 400px; 
+                    width: 100%; 
           
                     @media @desktop {
                         max-width: 600px;
